@@ -1,5 +1,8 @@
 2008-05-03  Marcus D. Hanwell  <marcus@cryos.org>
 
+	* libavogadro/src/engines/orbitalengine.*: Added some settings
+	persistence, improved the quickRender a little too.
+
 	* libavogadro/src/tools/clickmeasuretool.*: More guarded pointers to
 	prevent crashing caused by dangling pointers.
 
